{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 85,
  "lineage": "905284e3-d5fa-be48-2e19-8881e07f1e80",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-060b5548882a16b3c",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-060b5548882a16b3c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e4a7f84fc8556df"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "saas-hr-staging-eks-v2-cluster-20250526223942366300000002",
            "name_prefix": "saas-hr-staging-eks-v2-cluster-",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "saas-hr-staging-eks-v2-cluster",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "saas-hr-staging-eks-v2-cluster",
              "Project": "saas-hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "25a73aef",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-09ef025304146dc01",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-09ef025304146dc01",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09e1530203e34913a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "saas-hr-staging-eks-cluster-20250526180837481900000002",
            "name_prefix": "saas-hr-staging-eks-cluster-",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "saas-hr-staging-eks-cluster",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "saas-hr-staging-eks-cluster",
              "Project": "saas-hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-04e4a7f84fc8556df",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e4a7f84fc8556df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060b5548882a16b3c"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060b5548882a16b3c"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060b5548882a16b3c"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060b5548882a16b3c"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060b5548882a16b3c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060b5548882a16b3c"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "saas-hr-staging-eks-v2-node-20250526223942361700000001",
            "name_prefix": "saas-hr-staging-eks-v2-node-",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "saas-hr-staging-eks-v2-node",
              "Project": "saas-hr",
              "kubernetes.io/cluster/saas-hr-staging-eks-v2": "owned"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "saas-hr-staging-eks-v2-node",
              "Project": "saas-hr",
              "kubernetes.io/cluster/saas-hr-staging-eks-v2": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "17cb4d54",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-09e1530203e34913a",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e1530203e34913a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ef025304146dc01"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ef025304146dc01"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ef025304146dc01"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ef025304146dc01"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ef025304146dc01"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ef025304146dc01"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "saas-hr-staging-eks-node-20250526180837471800000001",
            "name_prefix": "saas-hr-staging-eks-node-",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "saas-hr-staging-eks-node",
              "Project": "saas-hr",
              "kubernetes.io/cluster/saas-hr-staging-eks": "owned"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "saas-hr-staging-eks-node",
              "Project": "saas-hr",
              "kubernetes.io/cluster/saas-hr-staging-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4124690247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-060b5548882a16b3c",
            "security_group_rule_id": "sgr-07804b4d744be54b6",
            "self": false,
            "source_security_group_id": "sg-04e4a7f84fc8556df",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "deposed": "e8cf68b2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-215358042",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ef025304146dc01",
            "security_group_rule_id": "sgr-09abcbd01a6f22f8a",
            "self": false,
            "source_security_group_id": "sg-09e1530203e34913a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2756493278",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04e4a7f84fc8556df",
            "security_group_rule_id": "sgr-0fcb111fbbd5dc02b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_all",
          "deposed": "1959862d",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-925973047",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09e1530203e34913a",
            "security_group_rule_id": "sgr-08e48d94dfc10c66e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4038592515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04e4a7f84fc8556df",
            "security_group_rule_id": "sgr-063a2ff61326924c7",
            "self": false,
            "source_security_group_id": "sg-060b5548882a16b3c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "deposed": "f621e94a",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2582127260",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e1530203e34913a",
            "security_group_rule_id": "sgr-0c5c04b58dcae0b5e",
            "self": false,
            "source_security_group_id": "sg-09ef025304146dc01",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3694925998",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04e4a7f84fc8556df",
            "security_group_rule_id": "sgr-040ade6b9f712c7c2",
            "self": false,
            "source_security_group_id": "sg-060b5548882a16b3c",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "deposed": "cdb83cc8",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3082310888",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e1530203e34913a",
            "security_group_rule_id": "sgr-0f71a32852312d257",
            "self": false,
            "source_security_group_id": "sg-09ef025304146dc01",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-360611640",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04e4a7f84fc8556df",
            "security_group_rule_id": "sgr-0148b4a6e203c98fb",
            "self": false,
            "source_security_group_id": "sg-060b5548882a16b3c",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "deposed": "c8cede08",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2130326398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e1530203e34913a",
            "security_group_rule_id": "sgr-0bf0922833afad3b2",
            "self": false,
            "source_security_group_id": "sg-09ef025304146dc01",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-102908697",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04e4a7f84fc8556df",
            "security_group_rule_id": "sgr-0564b86dc71cd414c",
            "self": false,
            "source_security_group_id": "sg-060b5548882a16b3c",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "deposed": "da86667e",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1839599455",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e1530203e34913a",
            "security_group_rule_id": "sgr-0985174479f6a0ad5",
            "self": false,
            "source_security_group_id": "sg-09ef025304146dc01",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1652781266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04e4a7f84fc8556df",
            "security_group_rule_id": "sgr-052bd9ac2071cc02c",
            "self": false,
            "source_security_group_id": "sg-060b5548882a16b3c",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "deposed": "5d6ae036",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-151469204",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e1530203e34913a",
            "security_group_rule_id": "sgr-0f62f44dc9ce9a8af",
            "self": false,
            "source_security_group_id": "sg-09ef025304146dc01",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1631859044",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04e4a7f84fc8556df",
            "security_group_rule_id": "sgr-00ec3e7b3444bdff8",
            "self": false,
            "source_security_group_id": "sg-060b5548882a16b3c",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "deposed": "42287334",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4276864461",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e1530203e34913a",
            "security_group_rule_id": "sgr-0b92bf4725efe67ed",
            "self": false,
            "source_security_group_id": "sg-09ef025304146dc01",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1096118927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04e4a7f84fc8556df",
            "security_group_rule_id": "sgr-097490b5f8a8a5c20",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "deposed": "f3c292e4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2948126608",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e1530203e34913a",
            "security_group_rule_id": "sgr-0cf56a36d1a5d2763",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1325163600",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04e4a7f84fc8556df",
            "security_group_rule_id": "sgr-01f2ebd2aadea3718",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "deposed": "d9e62bdd",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3034402724",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e1530203e34913a",
            "security_group_rule_id": "sgr-048e90fd7f5aa8e3d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3936602047",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-04e4a7f84fc8556df",
            "security_group_rule_id": "sgr-020c3e0f8d8a4d894",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "deposed": "a5be8940",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-277015627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09e1530203e34913a",
            "security_group_rule_id": "sgr-0f590936e482c73b9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-070cd10a77aefba9c",
            "description": "Security group for Redis cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070cd10a77aefba9c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Redis access from EKS nodes",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0936b1690504f0759"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "saas-hr-redis-staging20250526181129325000000001",
            "name_prefix": "saas-hr-redis-staging",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "saas-rh-staging",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-redis-staging",
              "Project": "saas-hr",
              "Team": "devops"
            },
            "tags_all": {
              "CostCenter": "saas-rh-staging",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-redis-staging",
              "Project": "saas-hr",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.security_groups.aws_security_group.eks",
            "module.security_groups.aws_security_group.elasticache",
            "module.security_groups.aws_security_group.rds",
            "module.security_groups.aws_security_group_rule.eks_egress",
            "module.security_groups.aws_security_group_rule.elasticache_egress",
            "module.security_groups.aws_security_group_rule.elasticache_from_eks",
            "module.security_groups.aws_security_group_rule.rds_egress",
            "module.security_groups.aws_security_group_rule.rds_from_eks",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "396c7a01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-050564ab4ce032d87",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050564ab4ce032d87",
            "ingress": [],
            "name": "saas-rh-redis-20250524163110692800000003",
            "name_prefix": "saas-rh-redis-",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "saas-rh-redis-staging",
              "Project": "saas-rh"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "saas-rh-redis-staging",
              "Project": "saas-rh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.kms.data.aws_iam_policy_document.kms",
            "module.security_groups.aws_security_group.eks",
            "module.security_groups.aws_security_group.elasticache",
            "module.security_groups.aws_security_group.rds",
            "module.security_groups.aws_security_group_rule.eks_egress",
            "module.security_groups.aws_security_group_rule.elasticache_egress",
            "module.security_groups.aws_security_group_rule.elasticache_from_eks",
            "module.security_groups.aws_security_group_rule.rds_egress",
            "module.security_groups.aws_security_group_rule.rds_from_eks",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-2021141270",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-070cd10a77aefba9c",
            "security_group_rule_id": "sgr-066df398a031bc49e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elasticache.aws_security_group.redis",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.security_groups.aws_security_group.eks",
            "module.security_groups.aws_security_group.elasticache",
            "module.security_groups.aws_security_group.rds",
            "module.security_groups.aws_security_group_rule.eks_egress",
            "module.security_groups.aws_security_group_rule.elasticache_egress",
            "module.security_groups.aws_security_group_rule.elasticache_from_eks",
            "module.security_groups.aws_security_group_rule.rds_egress",
            "module.security_groups.aws_security_group_rule.rds_from_eks",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ]
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Redis access from EKS nodes",
            "from_port": 6379,
            "id": "sgrule-169029166",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-070cd10a77aefba9c",
            "security_group_rule_id": "sgr-0db6945859b2d3377",
            "self": false,
            "source_security_group_id": "sg-0936b1690504f0759",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elasticache.aws_security_group.redis",
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.security_groups.aws_security_group.eks",
            "module.security_groups.aws_security_group.elasticache",
            "module.security_groups.aws_security_group.rds",
            "module.security_groups.aws_security_group_rule.eks_egress",
            "module.security_groups.aws_security_group_rule.elasticache_egress",
            "module.security_groups.aws_security_group_rule.elasticache_from_eks",
            "module.security_groups.aws_security_group_rule.rds_egress",
            "module.security_groups.aws_security_group_rule.rds_from_eks",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-0dc1a26796a69349b",
            "description": "Security group for RDS PostgreSQL",
            "egress": [],
            "id": "sg-0dc1a26796a69349b",
            "ingress": [],
            "name": "saas-hr-rds-staging20250526230832601900000003",
            "name_prefix": "saas-hr-rds-staging",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "saas-rh-staging",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-rds-staging",
              "Project": "saas-hr",
              "Team": "devops"
            },
            "tags_all": {
              "CostCenter": "saas-rh-staging",
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-rds-staging",
              "Project": "saas-hr",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.monitoring.aws_cloudwatch_log_group.application",
            "module.monitoring.aws_cloudwatch_log_metric_filter.error_logs",
            "module.monitoring.aws_cloudwatch_metric_alarm.eks_node_count",
            "module.monitoring.aws_cloudwatch_metric_alarm.elasticache_cpu",
            "module.monitoring.aws_cloudwatch_metric_alarm.error_logs",
            "module.monitoring.aws_cloudwatch_metric_alarm.rds_cpu",
            "module.monitoring.aws_iam_role.rds_enhanced_monitoring",
            "module.monitoring.aws_iam_role_policy_attachment.rds_enhanced_monitoring",
            "module.monitoring.aws_sns_topic.alerts",
            "module.monitoring.aws_sns_topic_subscription.email",
            "module.security_groups.aws_security_group.eks",
            "module.security_groups.aws_security_group.elasticache",
            "module.security_groups.aws_security_group.rds",
            "module.security_groups.aws_security_group_rule.eks_egress",
            "module.security_groups.aws_security_group_rule.elasticache_egress",
            "module.security_groups.aws_security_group_rule.elasticache_from_eks",
            "module.security_groups.aws_security_group_rule.rds_egress",
            "module.security_groups.aws_security_group_rule.rds_from_eks",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "5d2d9f58",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-003ff7df68d1a3a75",
            "description": "Allow inbound traffic for RDS",
            "egress": [],
            "id": "sg-003ff7df68d1a3a75",
            "ingress": [],
            "name": "saas-rh-rds-staging",
            "name_prefix": "",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "saas-rh"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Project": "saas-rh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.kms.data.aws_iam_policy_document.kms",
            "module.monitoring.aws_cloudwatch_log_group.application",
            "module.monitoring.aws_cloudwatch_log_group.eks",
            "module.monitoring.aws_cloudwatch_log_group.elasticache",
            "module.monitoring.aws_cloudwatch_log_group.rds",
            "module.monitoring.aws_cloudwatch_log_metric_filter.error_logs",
            "module.monitoring.aws_cloudwatch_metric_alarm.eks_node_count",
            "module.monitoring.aws_cloudwatch_metric_alarm.elasticache_cpu",
            "module.monitoring.aws_cloudwatch_metric_alarm.error_logs",
            "module.monitoring.aws_cloudwatch_metric_alarm.rds_cpu",
            "module.monitoring.aws_iam_role.rds_enhanced_monitoring",
            "module.monitoring.aws_iam_role_policy_attachment.rds_enhanced_monitoring",
            "module.monitoring.aws_sns_topic.alerts",
            "module.monitoring.aws_sns_topic_subscription.email",
            "module.security_groups.aws_security_group.eks",
            "module.security_groups.aws_security_group.elasticache",
            "module.security_groups.aws_security_group.rds",
            "module.security_groups.aws_security_group_rule.eks_egress",
            "module.security_groups.aws_security_group_rule.elasticache_egress",
            "module.security_groups.aws_security_group_rule.elasticache_from_eks",
            "module.security_groups.aws_security_group_rule.rds_egress",
            "module.security_groups.aws_security_group_rule.rds_from_eks",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-3073790679",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dc1a26796a69349b",
            "security_group_rule_id": "sgr-0ddc9466471b266cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.monitoring.aws_cloudwatch_log_group.application",
            "module.monitoring.aws_cloudwatch_log_metric_filter.error_logs",
            "module.monitoring.aws_cloudwatch_metric_alarm.eks_node_count",
            "module.monitoring.aws_cloudwatch_metric_alarm.elasticache_cpu",
            "module.monitoring.aws_cloudwatch_metric_alarm.error_logs",
            "module.monitoring.aws_cloudwatch_metric_alarm.rds_cpu",
            "module.monitoring.aws_iam_role.rds_enhanced_monitoring",
            "module.monitoring.aws_iam_role_policy_attachment.rds_enhanced_monitoring",
            "module.monitoring.aws_sns_topic.alerts",
            "module.monitoring.aws_sns_topic_subscription.email",
            "module.rds.aws_security_group.rds",
            "module.security_groups.aws_security_group.eks",
            "module.security_groups.aws_security_group.elasticache",
            "module.security_groups.aws_security_group.rds",
            "module.security_groups.aws_security_group_rule.eks_egress",
            "module.security_groups.aws_security_group_rule.elasticache_egress",
            "module.security_groups.aws_security_group_rule.elasticache_from_eks",
            "module.security_groups.aws_security_group_rule.rds_egress",
            "module.security_groups.aws_security_group_rule.rds_from_eks",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow PostgreSQL access from EKS nodes",
            "from_port": 5432,
            "id": "sgrule-513392528",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dc1a26796a69349b",
            "security_group_rule_id": "sgr-0cbb6411601f4e284",
            "self": false,
            "source_security_group_id": "sg-0936b1690504f0759",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kms.aws_kms_alias.main",
            "module.kms.aws_kms_key.main",
            "module.kms.data.aws_caller_identity.current",
            "module.monitoring.aws_cloudwatch_log_group.application",
            "module.monitoring.aws_cloudwatch_log_metric_filter.error_logs",
            "module.monitoring.aws_cloudwatch_metric_alarm.eks_node_count",
            "module.monitoring.aws_cloudwatch_metric_alarm.elasticache_cpu",
            "module.monitoring.aws_cloudwatch_metric_alarm.error_logs",
            "module.monitoring.aws_cloudwatch_metric_alarm.rds_cpu",
            "module.monitoring.aws_iam_role.rds_enhanced_monitoring",
            "module.monitoring.aws_iam_role_policy_attachment.rds_enhanced_monitoring",
            "module.monitoring.aws_sns_topic.alerts",
            "module.monitoring.aws_sns_topic_subscription.email",
            "module.rds.aws_security_group.rds",
            "module.security_groups.aws_security_group.eks",
            "module.security_groups.aws_security_group.elasticache",
            "module.security_groups.aws_security_group.rds",
            "module.security_groups.aws_security_group_rule.eks_egress",
            "module.security_groups.aws_security_group_rule.elasticache_egress",
            "module.security_groups.aws_security_group_rule.elasticache_from_eks",
            "module.security_groups.aws_security_group_rule.rds_egress",
            "module.security_groups.aws_security_group_rule.rds_from_eks",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-0936b1690504f0759",
            "description": "Security group for EKS cluster nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0936b1690504f0759",
            "ingress": [],
            "name": "saas-hr-eks-staging20250526172724089200000001",
            "name_prefix": "saas-hr-eks-staging",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "saas-rh-staging",
              "Environment": "staging",
              "Name": "saas-hr-eks-staging",
              "Team": "devops"
            },
            "tags_all": {
              "CostCenter": "saas-rh-staging",
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "saas-hr-eks-staging",
              "Project": "saas-hr",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-0ed6ab97d900071dc",
            "description": "Security group for ElastiCache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed6ab97d900071dc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Redis access from EKS nodes",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0936b1690504f0759"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "saas-hr-elasticache-staging20250526172724089300000003",
            "name_prefix": "saas-hr-elasticache-staging",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "saas-rh-staging",
              "Environment": "staging",
              "Name": "saas-hr-elasticache-staging",
              "Team": "devops"
            },
            "tags_all": {
              "CostCenter": "saas-rh-staging",
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "saas-hr-elasticache-staging",
              "Project": "saas-hr",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-076a722538d7e15b3",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076a722538d7e15b3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL access from EKS nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0936b1690504f0759"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "saas-hr-rds-staging20250526172724089200000002",
            "name_prefix": "saas-hr-rds-staging",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "saas-rh-staging",
              "Environment": "staging",
              "Name": "saas-hr-rds-staging",
              "Team": "devops"
            },
            "tags_all": {
              "CostCenter": "saas-rh-staging",
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "saas-hr-rds-staging",
              "Project": "saas-hr",
              "Team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-1694225558",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0936b1690504f0759",
            "security_group_rule_id": "sgr-014085370faebf4db",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.eks",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elasticache_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-416916577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ed6ab97d900071dc",
            "security_group_rule_id": "sgr-07d003990d4e934dc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.elasticache",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elasticache_from_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Redis access from EKS nodes",
            "from_port": 6379,
            "id": "sgrule-1384993958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ed6ab97d900071dc",
            "security_group_rule_id": "sgr-0563e6aa914028715",
            "self": false,
            "source_security_group_id": "sg-0936b1690504f0759",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.eks",
            "module.security_groups.aws_security_group.elasticache",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-483318854",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-076a722538d7e15b3",
            "security_group_rule_id": "sgr-080688dad000cdd0b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.rds",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow PostgreSQL access from EKS nodes",
            "from_port": 5432,
            "id": "sgrule-2912353464",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-076a722538d7e15b3",
            "security_group_rule_id": "sgr-0be8dda1574bae473",
            "self": false,
            "source_security_group_id": "sg-0936b1690504f0759",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.eks",
            "module.security_groups.aws_security_group.rds",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.main",
            "module.vpc.aws_iam_policy.flow_log",
            "module.vpc.aws_iam_role.flow_log",
            "module.vpc.aws_iam_role_policy_attachment.flow_log",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_security_group.workers",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.s3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076adc703318c10df",
            "arn": "arn:aws:ec2:us-east-1:826726045450:elastic-ip/eipalloc-076adc703318c10df",
            "association_id": "eipassoc-06df17384796462c4",
            "domain": "vpc",
            "id": "eipalloc-076adc703318c10df",
            "network_border_group": "us-east-1",
            "network_interface": "eni-059c9eea6327d40b0",
            "private_dns": "ip-10-0-101-241.ec2.internal",
            "private_ip": "10.0.101.241",
            "public_dns": "ec2-34-200-159-92.compute-1.amazonaws.com",
            "public_ip": "34.200.159.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-nat-eip",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-nat-eip",
              "Project": "saas-hr"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:internet-gateway/igw-0f8974efc4bf29e34",
            "id": "igw-0f8974efc4bf29e34",
            "owner_id": "826726045450",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-igw",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-igw",
              "Project": "saas-hr"
            },
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076adc703318c10df",
            "association_id": "eipassoc-06df17384796462c4",
            "connectivity_type": "public",
            "id": "nat-034eafe367895b012",
            "network_interface_id": "eni-059c9eea6327d40b0",
            "private_ip": "10.0.101.241",
            "public_ip": "34.200.159.92",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-086489250460de383",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-nat",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-nat",
              "Project": "saas-hr"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:route-table/rtb-04d66a1ff09782bf8",
            "id": "rtb-04d66a1ff09782bf8",
            "owner_id": "826726045450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034eafe367895b012",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-database-rt",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-database-rt",
              "Project": "saas-hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:route-table/rtb-0264266d262a8655e",
            "id": "rtb-0264266d262a8655e",
            "owner_id": "826726045450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034eafe367895b012",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-rt-us-east-1a",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-rt-us-east-1a",
              "Project": "saas-hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:route-table/rtb-05b6c3508d8ad1fcb",
            "id": "rtb-05b6c3508d8ad1fcb",
            "owner_id": "826726045450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034eafe367895b012",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-rt-us-east-1b",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-rt-us-east-1b",
              "Project": "saas-hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:route-table/rtb-07d3cfbdc33c607a7",
            "id": "rtb-07d3cfbdc33c607a7",
            "owner_id": "826726045450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034eafe367895b012",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-rt-us-east-1c",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-rt-us-east-1c",
              "Project": "saas-hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:route-table/rtb-0bbeed70f0a97ea1f",
            "id": "rtb-0bbeed70f0a97ea1f",
            "owner_id": "826726045450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8974efc4bf29e34",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-public-rt",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-public-rt",
              "Project": "saas-hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e3074de656ccc7e",
            "route_table_id": "rtb-04d66a1ff09782bf8",
            "subnet_id": "subnet-0ad28af56eb06cb1d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036e9fdb61109d0f1",
            "route_table_id": "rtb-04d66a1ff09782bf8",
            "subnet_id": "subnet-0a7a6acb07310f57d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066a28138c901d0df",
            "route_table_id": "rtb-04d66a1ff09782bf8",
            "subnet_id": "subnet-0366a45e62cca75ff"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d3943481fc13784",
            "route_table_id": "rtb-0264266d262a8655e",
            "subnet_id": "subnet-05fa3002a6839f515"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1c1cd3567a907f7",
            "route_table_id": "rtb-05b6c3508d8ad1fcb",
            "subnet_id": "subnet-057af0fc0cfd01e2d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c268479923ca699b",
            "route_table_id": "rtb-07d3cfbdc33c607a7",
            "subnet_id": "subnet-0b917ff6e7f73d6e4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031bf4a8400e54515",
            "route_table_id": "rtb-0bbeed70f0a97ea1f",
            "subnet_id": "subnet-086489250460de383"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a54095104f91fc0e",
            "route_table_id": "rtb-0bbeed70f0a97ea1f",
            "subnet_id": "subnet-0a20069e083d8de80"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052ff5c6330e1a20d",
            "route_table_id": "rtb-0bbeed70f0a97ea1f",
            "subnet_id": "subnet-0835abf3c18cca9f9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-0b461f7995dae7d48",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b461f7995dae7d48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "saas-hr-alb-sg20250526172502305100000002",
            "name_prefix": "saas-hr-alb-sg",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "saas-hr-alb-sg",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "saas-hr-alb-sg",
              "Project": "saas-hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-0bc6761b2a67f5b38",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc6761b2a67f5b38",
            "ingress": [],
            "name": "saas-hr-default-sg20250526172502911200000003",
            "name_prefix": "saas-hr-default-sg",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "saas-hr-default-sg",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "saas-hr-default-sg",
              "Project": "saas-hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:security-group/sg-0a0b5663559aab844",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0b5663559aab844",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all traffic from default security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0bc6761b2a67f5b38"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "saas-hr-workers-sg20250526172505475800000005",
            "name_prefix": "saas-hr-workers-sg",
            "owner_id": "826726045450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "saas-hr-workers-sg",
              "Project": "saas-hr",
              "kubernetes.io/cluster/saas-hr-staging": "owned"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "saas-hr-workers-sg",
              "Project": "saas-hr",
              "kubernetes.io/cluster/saas-hr-staging": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.default",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:subnet/subnet-0ad28af56eb06cb1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad28af56eb06cb1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826726045450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-database-1",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-database-1",
              "Project": "saas-hr"
            },
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:subnet/subnet-0a7a6acb07310f57d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7a6acb07310f57d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826726045450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-database-2",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-database-2",
              "Project": "saas-hr"
            },
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:subnet/subnet-0366a45e62cca75ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.203.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0366a45e62cca75ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826726045450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-database-3",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-database-3",
              "Project": "saas-hr"
            },
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:subnet/subnet-05fa3002a6839f515",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fa3002a6839f515",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826726045450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-1",
              "Project": "saas-hr",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-1",
              "Project": "saas-hr",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:subnet/subnet-057af0fc0cfd01e2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057af0fc0cfd01e2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826726045450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-2",
              "Project": "saas-hr",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-2",
              "Project": "saas-hr",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:subnet/subnet-0b917ff6e7f73d6e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b917ff6e7f73d6e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826726045450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-3",
              "Project": "saas-hr",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-private-3",
              "Project": "saas-hr",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:subnet/subnet-086489250460de383",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086489250460de383",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826726045450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-public-1",
              "Project": "saas-hr",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-public-1",
              "Project": "saas-hr",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:subnet/subnet-0a20069e083d8de80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a20069e083d8de80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826726045450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-public-2",
              "Project": "saas-hr",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-public-2",
              "Project": "saas-hr",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:subnet/subnet-0835abf3c18cca9f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0835abf3c18cca9f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826726045450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-public-3",
              "Project": "saas-hr",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-public-3",
              "Project": "saas-hr",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:vpc/vpc-0f23c574b54be9624",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0472c1f8d3aa94279",
            "default_route_table_id": "rtb-0c5e2dac6a805ada3",
            "default_security_group_id": "sg-0774140de20639383",
            "dhcp_options_id": "dopt-024f39bf75caf267f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f23c574b54be9624",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5e2dac6a805ada3",
            "owner_id": "826726045450",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-vpc-staging",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-vpc-staging",
              "Project": "saas-hr"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826726045450:vpc-endpoint/vpce-0ffd64a99140d9af7",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0ffd64a99140d9af7",
            "owner_id": "826726045450",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-s3-endpoint",
              "Project": "saas-hr"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "saas-hr-s3-endpoint",
              "Project": "saas-hr"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f23c574b54be9624"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}